data/all_generated_tests/raw_wast_tests/if_StackCorruption_1368.wast
;; 9. **Test 9: Stack State Mismatch from Erroneous Loop Inside Branch**    - **Description**: Create a loop within the `then` block of an `if` instruction that improperly manipulates the stack, causing state mismatches when execution reaches the `else` block.    - **Constraint Checked**: Proper stack management around loops nested within `if` branches.    - **Relation to Stack Corruption**: Mismanaged loops within branches can severely corrupt stack states, leading to execution errors outside the loop context.

(assert_invalid
  (module
    (func (result i32)
      (if (result i32) (i32.const 1)
        (then
          (loop (result i32)
            (i32.const 42)
            (br 1)
          )
        )
        (else
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)